# help-exillium

./: .gitignore  DOCUMENTACAO_DB.md  LICENSE  README.md  config.json  db.py  main.py  pyproject.toml  requirements.txt  squarecloud.app
cogs/: MuteModal.py  __init__.py  amantes.py  call_tempo.py  callstatus.py  casamento.py  economia.py  frase.py  gf.py  help.py  inventario.py  loja.py  mensagem.py  mod.py  painel.py  perfil.py  rpg_combate.py  set_sobre.py  stay_voice.py  top_tempo.py  uptime.py
data/: economia.json
scripts/: migrate_all_to_mongo.py
